text overflow breaks note result fixed

--- a/Cloudents.Web/ClientApp/components/results/ResultNote.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultNote.less
@@ -247,6 +247,8 @@
             font-size: 13px;
             line-height: 1.5;
             letter-spacing: -0.2px;
+            word-break: break-all;
+            word-break: break-word;   
           }
         }
       }
